force-app/main/default/objects/Incidents__c/Incidents__c.object-meta.xml
<CustomObject>
    <label>Incidents</label>
    <nameField>
        <displayFormat>{YYYY}/{MM}/{DD}-{0}</displayFormat>
        <label>Incident Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incidents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>