force-app/main/default/objects/Incidents__c/fields/Additional_Comments__c.field-meta.xml
<CustomField>
    <fullName>Additional_Comments__c</fullName>
    <label>Additional Comments</label>
    <length>2768</length>
    <type>LongTextArea</type>
</CustomField>