force-app/main/default/objects/Incidents__c/fields/Behaviors_Exhibited_by_the_Dog__c.field-meta.xml
<CustomField>
    <fullName>Behaviors_Exhibited_by_the_Dog__c</fullName>
    <label>Behaviors Exhibited by the Dog</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Repetitive behavior (pacing - licking - drooling)</fullName>
            </value>
            <value>
                <fullName>Staring at wall or corner of kennel</fullName>
            </value>
            <value>
                <fullName>High arousal/excitement (intense - energetic activity)</fullName>
            </value>
            <value>
                <fullName>Tugging or climbing the leash</fullName>
            </value>
            <value>
                <fullName>Hard mouthing</fullName>
            </value>
            <value>
                <fullName>Climbing or high jumping up kennel walls or fence</fullName>
            </value>
            <value>
                <fullName>Escaping from kennel</fullName>
            </value>
            <value>
                <fullName>Trying to get away</fullName>
            </value>
            <value>
                <fullName>Trying to get at another dog</fullName>
            </value>
            <value>
                <fullName>Fighting with another dog</fullName>
            </value>
            <value>
                <fullName>Guarding food or chewy from person</fullName>
            </value>
            <value>
                <fullName>Guarding non-food item from person</fullName>
            </value>
            <value>
                <fullName>Resisting medical restraint</fullName>
            </value>
            <value>
                <fullName>Stiffening or freezing</fullName>
            </value>
            <value>
                <fullName>Whipping head toward person - unsure if dog would bite</fullName>
            </value>
            <value>
                <fullName>Lunging toward a person</fullName>
            </value>
            <value>
                <fullName>Muzzle punching (forceful jab with nose)</fullName>
            </value>
            <value>
                <fullName>Growling</fullName>
            </value>
            <value>
                <fullName>Showing teeth</fullName>
            </value>
            <value>
                <fullName>Snapping</fullName>
            </value>
            <value>
                <fullName>Biting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>