force-app/main/default/objects/Incidents__c/fields/Clothing_Worn_at_Bite_Site__c.field-meta.xml
<CustomField>
    <fullName>Clothing_Worn_at_Bite_Site__c</fullName>
    <label>Clothing Worn at Bite Site</label>
    <type>TextArea</type>
</CustomField>