force-app/main/default/objects/Incidents__c/fields/Damage_Done_by_the_Dog__c.field-meta.xml
<CustomField>
    <fullName>Damage_Done_by_the_Dog__c</fullName>
    <label>Damage Done by the Dog</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A - there was NO bite or damage</fullName>
            </value>
            <value>
                <fullName>Bruising</fullName>
            </value>
            <value>
                <fullName>Broken skin</fullName>
            </value>
            <value>
                <fullName>Shallow scratch or abrasion</fullName>
            </value>
            <value>
                <fullName>Deep scratch or abrasion</fullName>
            </value>
            <value>
                <fullName>Puncture</fullName>
            </value>
            <value>
                <fullName>Puncture with tearing</fullName>
            </value>
            <value>
                <fullName>Torn material (leash - clothing)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>