force-app/main/default/objects/Incidents__c/fields/If_dog_did_not_bite__c.field-meta.xml
<CustomField>
    <fullName>If_dog_did_not_bite__c</fullName>
    <description>If dog did not bite, do you think it would have done so if you hadn&apos;t taken evasive action or used defensive handling?</description>
    <label>If dog did not bite</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>