force-app/main/default/objects/Incidents__c/fields/Incident_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Incident_Date_Time__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Incident Date/Time</label>
    <type>DateTime</type>
</CustomField>