force-app/main/default/objects/Incidents__c/fields/Incident_Description__c.field-meta.xml
<CustomField>
    <fullName>Incident_Description__c</fullName>
    <label>Incident Description</label>
    <length>2768</length>
    <type>LongTextArea</type>
</CustomField>