force-app/main/default/objects/Incidents__c/fields/Incident_Report_PDF__c.field-meta.xml
<CustomField>
    <fullName>Incident_Report_PDF__c</fullName>
    <formula>HYPERLINK( &quot;/apex/Behavior_Incident_Report?Id=&quot; + Id, &quot;Incident Report PDF&quot;, &quot;_top&quot; )</formula>
    <label>Incident Report PDF</label>
    <type>Text</type>
</CustomField>