force-app/main/default/objects/Incidents__c/fields/Number_of_bites__c.field-meta.xml
<CustomField>
    <fullName>Number_of_bites__c</fullName>
    <label>Number of bites</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>