force-app/main/default/objects/Incidents__c/fields/Other_Damage_Done_by_the_Dog__c.field-meta.xml
<CustomField>
    <fullName>Other_Damage_Done_by_the_Dog__c</fullName>
    <label>Other Damage Done by the Dog</label>
    <length>2768</length>
    <type>LongTextArea</type>
</CustomField>