force-app/main/default/objects/Incidents__c/fields/Person_Involved__c.field-meta.xml
<CustomField>
    <fullName>Person_Involved__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Person Involved</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Incidents</relationshipLabel>
    <relationshipName>Incidents</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>