force-app/main/default/objects/Incidents__c/fields/Please_explain_why_you_think_so__c.field-meta.xml
<CustomField>
    <fullName>Please_explain_why_you_think_so__c</fullName>
    <label>Please explain why you think so</label>
    <length>2768</length>
    <type>LongTextArea</type>
</CustomField>