force-app/main/default/objects/Incidents__c/fields/Report_Date__c.field-meta.xml
<CustomField>
    <fullName>Report_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Report Date</label>
    <type>Date</type>
</CustomField>