force-app/main/default/objects/Incidents__c/fields/Specific_Target_of_Dog_s_Behavior__c.field-meta.xml
<CustomField>
    <fullName>Specific_Target_of_Dog_s_Behavior__c</fullName>
    <label>Specific Target of Dog&apos;s Behavior</label>
    <type>TextArea</type>
</CustomField>