force-app/main/default/objects/Incidents__c/fields/Supervisor_Team_Lead__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_Team_Lead__c</fullName>
    <label>Supervisor/Team Lead</label>
    <type>TextArea</type>
</CustomField>