force-app/main/default/objects/Incidents__c/fields/Type_of_Bite__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Bite__c</fullName>
    <label>Type of Bite</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A - there was NO bite</fullName>
            </value>
            <value>
                <fullName>Single bite</fullName>
            </value>
            <value>
                <fullName>Bite and hold</fullName>
            </value>
            <value>
                <fullName>Bite, hold and shake</fullName>
            </value>
            <value>
                <fullName>Multiple bites</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>