force-app/main/default/objects/Incidents__c/fields/Was_Bitten_Area_Covered_with_Clothing__c.field-meta.xml
<CustomField>
    <fullName>Was_Bitten_Area_Covered_with_Clothing__c</fullName>
    <label>Was Bitten Area Covered with Clothing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A - Not applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>