force-app/main/default/objects/Incidents__c/fields/Was_defensive_handling_used__c.field-meta.xml
<CustomField>
    <fullName>Was_defensive_handling_used__c</fullName>
    <label>Was defensive handling used?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>