force-app/main/default/objects/Incidents__c/fields/Would_dog_have_bitten_w_o_this_handling__c.field-meta.xml
<CustomField>
    <fullName>Would_dog_have_bitten_w_o_this_handling__c</fullName>
    <label>Would dog have bitten w/o this handling?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>